res/examples/invalid/let_decl_in_grouping_parans.eg
(let a = 123;);

// out: SyntaxError: unexpected "let"; expected: ["\"!\"", "\"(\"", "\")\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"if\"", "\"true\"", "\"{\"", "identifier", "number", "string"]
// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"assert_type\"", "\"const\"", "\"false\"", "\"fn\"", "\"if\"", "\"let\"", "\"return\"", "\"true\"", "\"type\"", "\"{\"", "\"}\"", "identifier", "number", "string"]